--- a/src/containers/DesktopApp.scss
+++ b/src/containers/DesktopApp.scss
@@ -20,15 +20,13 @@ $colors: (
 }
 
 :local(.container) {
-  @include background-image(linear-gradient(to bottom, #F2F2F2, #999));
-  padding: 0 $desktop-frame-width $desktop-frame-width $desktop-frame-width;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-
   .inner-container {
-    flex: 1 1;
-    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     @include background-image(linear-gradient(to bottom, process-colors($colors)));
+    z-index: 1;
   }
 }
