--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -5,8 +5,9 @@ $border-darken: 15%;
 $tool-border-color: thin solid darken($item-bg-color, $border-darken);
 $link-color: #007fd3;
 
-$desktop-window-bg-color-top: #777;
-$desktop-window-bg-color-bottom: #555;
+$desktop-window-bg-color-top: #CCC;
+$desktop-window-bg-color-bottom: #999;
+$desktop-window-title-color: #222;
 
 $desktop-tools-bg-color: #F2F1F0;
 $desktop-tools-item-bg-color: #FCFBFC;
