--- a/src/styles/dimens.scss
+++ b/src/styles/dimens.scss
@@ -1,4 +1,5 @@
-$desktop-frame-width: 8px;
+$desktop-frame-width: 5px;
+$desktop-menu-height: 26px;
 $title-weight: 700;
 $icon-size: 56px;
 $detail-icon-size: 36px;
